preparations for client
Signed-off-by: Paul Sokolov Jr <sokolov.p64@gmail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,11 @@
-Hello world!
+<!DOCTYPE HTML>
+<head>
+	<title>Spellcaster</title>
+</head>
+<body>
+	<div id="gameDiv"/>
+</body>
+
+<script src="/socket.io/socket.io.js"></script>
+
+<script src="./client/lib/main.js"></script>
